# cryptopals-solutions

./: .gitignore  README.md
c-solutions/: CMakeLists.txt  byte_utils.c  byte_utils.h  crypto_utils.c  crypto_utils.h  error_codes.h  file_utils.c  file_utils.h  task01.c  task02.c  task03.c  task04.c  task05.c  task06.c  task07.c  task08.c  task09.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  zero_memory.h
python-solutions/: setup.py
python-solutions/src/: task01.py  task02.py  task03.py  task04.py  task05.py  task06.py  task07.py  task08.py  task09.py  task10.py  task11.py  task12.py  task13.py  task14.py  task15.py  task16.py
python-solutions/tests/: test_task01.py  test_task02.py  test_task03.py  test_task04.py  test_task05.py  test_task06.py  test_task09.py  test_task10.py  test_task11.py  test_task12.py
